@@ -59,6 +59,21 @@ public class SecureShuffleUtils {
   }
 
   /**
+   * Verify the message matches the provided hash using the specified key. </p>
+   * This is only meant to be used when a process needs to verify against multiple different keys
+   * (ShuffleHandler for instance)
+   *
+   * @param hash
+   * @param msg
+   * @param key
+   * @return true when hashes match; false otherwise
+   */
+  private static boolean verifyHash(byte[] hash, byte[] msg, SecretKey key) {
+    byte[] msg_hash = generateByteHash(msg, key);
+    return WritableComparator.compareBytes(msg_hash, 0, msg_hash.length, hash, 0, hash.length) == 0;
+  }
+
+  /**
    * verify that hash equals to HMacHash(msg)
    * @param hash
    * @param msg
@@ -81,7 +96,27 @@ public class SecureShuffleUtils {
       throws IOException {
     return new String(Base64.encodeBase64(mgr.computeHash(enc_str.getBytes(Charsets.UTF_8))), Charsets.UTF_8);
   }
-  
+
+  /**
+   * Verify that the base64 encoded hash matches the hash generated by making use of the provided
+   * key on the specified message. </p>
+   * * This is only meant to be used when a process needs to verify against multiple different keys
+   * (ShuffleHandler for instance)
+   *
+   * @param base64Hash base64 encoded hash
+   * @param msg        the message
+   * @param key        the key to use to generate the hash from the message
+   * @throws IOException
+   */
+  public static void verifyReply(String base64Hash, String msg, SecretKey key) throws IOException {
+    byte[] hash = Base64.decodeBase64(base64Hash.getBytes(Charsets.UTF_8));
+    boolean res = verifyHash(hash, msg.getBytes(Charsets.UTF_8), key);
+
+    if(res != true) {
+      throw new IOException("Verification of the hashReply failed");
+    }
+  }
+
   /**
    * verify that base64Hash is same as HMacHash(msg)
    * @param base64Hash (Base64 encoded hash)
